<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="login_button_text">Login</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="upcoming_elections_label"><u>Upcoming Elections</u></string>
    <string name="followed_elections"><u>Followed Elections</u></string>
    <string name="follow_election_text">Follow Election</string>
    <string name="unfollow_election_text">Unfollow Election</string>
    <string name="voting_locations"><u>Voting Locations</u></string>
    <string name="ballot_locations"><u>Ballot Locations</u></string>
    <string name="state_correspondence"><u>State Correspondence</u></string>
    <string name="election_information"><u>Election Information</u></string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives"><u>My Representatives</u></string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="zip_hint">Zip</string>
    <!-- TODO: Add necessary string values -->

</resources>
